be/src/rpc/thrift-util.h
@@ -26,6 +26,7 @@
 #include <thrift/TApplicationException.h>
 #include <thrift/protocol/TDebugProtocol.h>
 #include <thrift/transport/TBufferTransports.h>
+#include <thrift/transport/TTransportException.h>
 
 #include "common/status.h"
 
@@ -154,8 +155,12 @@ std::ostream& operator<<(std::ostream& out, const TColumnValue& colval);
 /// string representation
 bool TNetworkAddressComparator(const TNetworkAddress& a, const TNetworkAddress& b);
 
-/// Returns true if the TException corresponds to a TCP socket recv timeout.
-bool IsRecvTimeoutTException(const apache::thrift::TException& e);
+/// Returns true if the TTransportException corresponds to a TCP socket recv timeout.
+bool IsRecvTimeoutTException(const apache::thrift::transport::TTransportException& e);
+
+/// Returns true if the TTransportException corresponds to a send failure due to
+/// lost network connection or timeout.
+bool IsSendFailTException(const apache::thrift::transport::TTransportException& e);
 
 }
 
